feat: 实现备用线路的释放和锁定接口
